[gd_scene load_steps=26 format=3 uid="uid://b54bcukid57p4"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/player_form_1.gd" id="1_p8eyj"]
[ext_resource type="Resource" path="res://Data/Movement Data/Form_1.tres" id="2_y3svm"]
[ext_resource type="Resource" path="res://Data/Stats/Form_1_Stats.tres" id="3_3l53u"]
[ext_resource type="Resource" uid="uid://bmjcgnbyfx68j" path="res://Data/Fillament Data/Form_01_Fillament_Data.tres" id="3_t7vbj"]
[ext_resource type="PackedScene" uid="uid://ccdvw2v34lcn6" path="res://Scenes/Components/wallclimb_box.tscn" id="4_ownlq"]
[ext_resource type="Texture2D" uid="uid://dnvg3p0iiehtb" path="res://Textures/Characters/KPG-Dog.png" id="6_411ji"]
[ext_resource type="PackedScene" uid="uid://bfmjbl00kj2vc" path="res://Scenes/Components/hurtbox.tscn" id="7_u2pat"]
[ext_resource type="AudioStream" uid="uid://bfcmace7xd7vo" path="res://Audio/Sounds/sx_int_pistol_fire_1.ogg" id="9_s36nx"]
[ext_resource type="AudioStream" uid="uid://onsj4rkpdeij" path="res://Audio/Sounds/sx_int_pistol_fire_2.ogg" id="10_pm6iy"]
[ext_resource type="AudioStream" uid="uid://dydgebr0fsmk0" path="res://Audio/Sounds/sx_int_pistol_fire_3.ogg" id="11_v8kjm"]
[ext_resource type="PackedScene" uid="uid://bm0gv0kec8ayt" path="res://Scenes/Components/form_1_gun.tscn" id="13_3e0b1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apoll"]
size = Vector2(17, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpe5m"]
size = Vector2(18, 6)

[sub_resource type="Animation" id="Animation_mlu16"]
length = 1.1

[sub_resource type="Animation" id="Animation_creca"]
resource_name = "Shoot"
length = 0.2
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_8vmw1"]
resource_name = "normal"
length = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x67tq"]
_data = {
"RESET": SubResource("Animation_mlu16"),
"Shoot": SubResource("Animation_creca"),
"normal": SubResource("Animation_8vmw1")
}

[sub_resource type="Animation" id="Animation_q36re"]
resource_name = "Hit"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_otwvt"]
resource_name = "Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ubivd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hl060"]
_data = {
"Hit": SubResource("Animation_q36re"),
"Normal": SubResource("Animation_otwvt"),
"RESET": SubResource("Animation_ubivd")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bhlfv"]
playback_mode = 1
random_pitch = 1.25
random_volume_offset_db = 0.4
streams_count = 3
stream_0/stream = ExtResource("9_s36nx")
stream_1/stream = ExtResource("10_pm6iy")
stream_2/stream = ExtResource("11_v8kjm")

[sub_resource type="Animation" id="Animation_kdnmr"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_j2ghh"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2ki5"]
_data = {
"idle": SubResource("Animation_kdnmr"),
"walk": SubResource("Animation_j2ghh")
}

[node name="Form_01" type="CharacterBody2D" groups=["Player"]]
position = Vector2(0, -9)
collision_layer = 2
script = ExtResource("1_p8eyj")
movement_data = ExtResource("2_y3svm")
fillament_data = ExtResource("3_t7vbj")
stats = ExtResource("3_3l53u")

[node name="wallclimb_box" parent="." instance=ExtResource("4_ownlq")]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_411ji")

[node name="Form_1_Gun" parent="." instance=ExtResource("13_3e0b1")]
position = Vector2(0, -2)
current_type = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_apoll")

[node name="Hurtbox" parent="." instance=ExtResource("7_u2pat")]
monitoring = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_gpe5m")

[node name="ShootingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x67tq")
}
autoplay = "normal"

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hl060")
}
autoplay = "Normal"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_bhlfv")
volume_db = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c2ki5")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
